# AISee

./: README.md  aisee  aisee.admin.agent.md  aisee.consumer.agent.md  aisee.skill.md  pyproject.toml
res/: describe.api.md  describe.mcp.md  describe.md  description.md  index.html
src/: __init__.py  blobs.py  catalog.py  cli.py  client.py  config.py  creds.py  describe.py  dockerctl.py  mcp_server.py  media.py  registry.py  resolution.py  server.py  tasks.py  textclean.py  vlm.py
src/aisee/: catalog.py  cli.py  client.py  creds.py  paths.py  server.py  tasks.py
