[project]
name = "aisee"
version = "0.6.5"
description = "AISee is a tool that gives AI agents eyes: serve VLMs on a GPU host and query images/video via CLI or REST API."
readme = "README.md"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [{ name = "Mikhail Yurasov", email = "me@yurasov.me" }]
keywords = ["vlm", "vision", "visual-qa", "e2e-testing", "vllm", "ai-agents", "multimodal"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Testing",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "httpx>=0.27",
    "pydantic>=2.6",
    "python-multipart>=0.0.9",
    "mcp>=1.10,<2",
]

[project.scripts]
aisee = "aisee.cli:main"

[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

# flat src/ layout: src/*.py IS the aisee package
[tool.setuptools]
packages = ["aisee"]

[tool.setuptools.package-dir]
aisee = "src"
